# DiffSo

./: .gitignore  DWT.ipynb  InvEVCS_CelebA_Compare copy.ipynb  InvHT_CFID_Filter.ipynb  InvHT_Iris_Compare.ipynb  InvHT_Palmprint_Compare.ipynb  RDDM_voc2012.ipynb  adv_train.ipynb  attack.ipynb  gen_dataset.ipynb  main.py  noise.ipynb  openml.ipynb  pyproject.toml  readme.md  robustness.ipynb  test copy.py  test.py  test_atk.py  test_rddm.py  train.py
frontend/: index.html
frontend/src/: App.vue  style.css
frontend/src/components/: CloudRecoverTab.vue  DatasetManageTab.vue  EdgeEncryptTab.vue  ModelManageTab.vue
my_datasets/: base.py  get_dataset.py
src/: residual_denoising_diffusion_pytorch.py
